--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 # Project module requirements
 
 # Basics
@@ -9,4 +10,4 @@ sympy==1.6.1
 cirq==0.8.2
 openfermion==0.11.0
 openfermioncirq==0.4.0
-
+openfermionpsi4==0.4
