--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@
 numpy==1.19.1
 scipy==1.5.2
 sympy==1.6.2
+jsonpickle==1.4.1
+matplotlib==3.3.0
 
 # Eigensolver specifics
 cirq==0.8.2
 openfermion==0.11.0
 openfermioncirq==0.4.0
 openfermionpsi4==0.4
-# psi4==1.3.2
+# psi4
