--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 
+
 # Project module requirements
 
 # Basics
@@ -7,6 +8,10 @@ scipy==1.5.2
 sympy==1.6.2
 jsonpickle==1.4.1
 matplotlib==3.3.0
+
+# Visualization
+qiskit
+pylatexenc
 
 # Eigensolver specifics
 cirq==0.8.2
