--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-
-
 # Project module requirements
 
 # Basics
@@ -8,6 +6,7 @@ scipy==1.5.2
 sympy==1.6.2
 jsonpickle==1.4.1
 matplotlib==3.3.0
+tqdm
 
 # Visualization
 qiskit
